# actix-app-api

./: .env.example  .gitignore  Cargo.toml  Makefile  README.MD  diesel.toml  jaegertracing.yaml  prometheus.yaml  rust-toolchain.toml
crates/4bytes/: Cargo.toml
crates/4bytes/src/: bytes.rs  lib.rs  visit.rs
crates/srv-api/: Cargo.toml
crates/srv-api/src/: async_handles.rs  database.rs  errors.rs  handles.rs  lib.rs  main.rs  models.rs  schema.rs  shutdown.rs
crates/srv-api/src/handlers/: health.rs  mod.rs  signatures.rs  tokens.rs
crates/srv-storage/: Cargo.toml
crates/srv-storage/migrations/2023-07-19-015256_create_signatures/: down.sql  up.sql
crates/srv-storage/migrations/2023-07-26-012729_tokens/: up.sql
crates/srv-storage/src/: lib.rs  pg.rs  pg_async.rs  schema.rs
crates/srv-storage/src/models/: mod.rs  signature.rs  signatures.rs  tokens.rs  version.rs
crates/srv-tracing/: Cargo.toml
crates/srv-tracing/src/: lib.rs
crates/token-list/: Cargo.toml
crates/token-list/src/: lib.rs  polygon.rs  uniswap.rs
migrations/2023-07-19-015256_create_signatures/: up.sql
src/: errors.rs  handles.rs  logging.rs  main copy.rs  main.rs
