[package]
name = "srv-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"

anyhow = "1.0.72"
thiserror = "1.0.43"
dotenvy = "0.15.7"
serde = { version = "1.0.1", features = ["derive"] }
serde_json = "1.0.103"

# database
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"

# opentelemetry
opentelemetry = { version = "0.19.0", features = [
	"rt-tokio",
	"rt-tokio-current-thread",
] }
opentelemetry-jaeger = { version = "0.18.0", features = [
	"rt-tokio",
	"rt-tokio-current-thread",
] }

# tracing
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.8"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
validator = "0.16.1"
