[package]
name = "srv-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"

anyhow = "1.0.72"
thiserror = "1.0.43"
dotenvy = "0.15.7"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# database

srv-storage = { path = "../srv-storage" }
srv-tracing = { path = "../srv-tracing" }

# opentelemetry
opentelemetry = { version = "0.19.0", features = [
	"rt-tokio",
	"rt-tokio-current-thread",
] }
opentelemetry-jaeger = { version = "0.18.0", features = [
	"rt-tokio",
	"rt-tokio-current-thread",
] }
# tracing
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.8"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

# validator
validator = "0.16.1"

tokio = { version = "1.29.0", features = ["full"] }

[features]
sync = ["srv-storage/sync"]
async = ["srv-storage/async"]
default = ["sync"]
