[package]
name = "srv-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# database
tokio = { workspace = true }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0" }
diesel-async = { git = "https://github.com/weiznich/diesel_async", branch = "main" }
diesel_migrations = "2.1.0"

[dev-dependencies]
dotenvy = "0.15.7"

[features]
sync = ["diesel/postgres", "diesel/r2d2", "diesel/chrono"]
async = [
	"diesel-async/postgres",
	"diesel-async/bb8",
	"diesel-async/async-connection-wrapper",
]
