[package]
name = "token-list"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }

serde = { workspace = true }
serde_json = { workspace = true }

srv-storage = { version = "0.1.0", path = "../srv-storage", features = [
	"async",
] }

tokio = { workspace = true, features = ["full"] }
